# SDL2_Android

MyApp/: settings.gradle
MyApp/SDL2/: cmake_install.cmake
MyApp/SDL2/src/core/android/: SDL_android.c
MyApp/SDL2_gfx/: CMakeLists.txt  cmake_install.cmake
MyApp/SDL2_image/: cmake_install.cmake
MyApp/SDL2_jpeg/: cmake_install.cmake
MyApp/SDL2_mixer/: cmake_install.cmake
MyApp/SDL2_png/: cmake_install.cmake
MyApp/SDL2_ttf/: cmake_install.cmake
MyApp/app/: build.gradle
MyApp/app/src/androidTest/java/com/your/game/: ExampleInstrumentedTest.java
MyApp/app/src/main/: AndroidManifest.xml
MyApp/app/src/main/assets/: scores.json
MyApp/app/src/main/java/com/your/game/: CustomLog.java  DummyEdit.java  GameActivity.java  MainActivity.java  SDLActivity.java  SDLGenericMotionListener_API12.java  SDLInputConnection.java  SDLJoystickHandler.java  SDLJoystickHandler_API12.java  SDLMain.java  SDLSurface.java
MyApp/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
MyApp/app/src/main/res/layout/: activity_main.xml
MyApp/app/src/main/res/values/: strings.xml
MyApp/app/src/test/java/com/your/game/: ExampleUnitTest.java
MyApp/freetype/: cmake_install.cmake
MyApp/gradle/wrapper/: gradle-wrapper.properties
MyApp/main/: CMakeLists.txt  build.gradle
MyApp/main/src/: BtnSprite.cpp  BtnSprite.h  DebugRenderer.cpp  DebugRenderer.h  FrameSprite.cpp  FrameSprite.h  GameManager.cpp  GameManager.h  SDL_android.c  SDL_main.cpp  SceneBase.cpp  SceneBase.h  SceneManager.cpp  SceneManager.h  SceneTitle.cpp  SceneTitle.h  ScoreBarRenderer.cpp  ScoreBarRenderer.h  StarBackground.cpp  StarBackground.h  StarBlink.cpp  StarBlink.h  ozateck.h
MyApp/main/src/utility/: UtilImagePool.cpp  UtilImagePool.h  UtilLevelData.cpp  UtilLevelData.h  UtilLocalSaves.cpp  UtilLocalSaves.h  UtilMath.cpp  UtilMath.h  UtilSoundPool.cpp  UtilSoundPool.h  UtilThread.cpp  UtilThread.h  UtilTimer.cpp  UtilTimer.h  UtilTtf.cpp  UtilTtf.h  Vec2.cpp  Vec2.h  utility.h
